gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingressgateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  parentRefs:
    - name: ingressgateway
  hostnames:
  - kiali.getambient.howardjohn.info
  rules:
    - backendRefs:
        - name: kiali
          port: 20001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: istio-system
spec:
  parentRefs:
    - name: ingressgateway
  hostnames:
  - prometheus.getambient.howardjohn.info
  rules:
    - backendRefs:
        - name: prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: istio-system
spec:
  parentRefs:
    - name: ingressgateway
  hostnames:
  - grafana.getambient.howardjohn.info
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo
  namespace: istio-system
spec:
  parentRefs:
    - name: ingressgateway
  hostnames:
  - bookinfo.getambient.howardjohn.info
  rules:
    - backendRefs:
        - name: productpage
          namespace: bookinfo
          port: 9080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ingress
  namespace: bookinfo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: istio-system
  to:
    - group: ""
      kind: Service
      name: productpage
